# magma-gpu

./: README.md  configure.ac  magma-gpu.cabal  magma.buildinfo.in
Foreign/CUDA/: Magma.hs
Foreign/CUDA/Magma/: TH.hs  Types.hs
