name:                   magma-gpu
version:                0.1.1.0
synopsis:               FFI bindings to the MAGMA GPU library
--description:          
license:                BSD3
license-file:           LICENSE
author:                 Trevor L. McDonell, Ben Sherman
maintainer:             Ben Sherman <benmsherman@gmail.com>
copyright:              Copyright (c) [2012..2014]. Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>, Ben Sherman
category:               Foreign
cabal-version:          >=1.8

build-type:             Custom
Extra-tmp-files:        magma.buildinfo config.status config.log
Extra-source-files:     configure
                        configure.ac
                        config.guess
                        config.sub
                        install-sh
                        magma.buildinfo.in

library
  exposed-modules:      Foreign.CUDA.Magma,
                        Foreign.CUDA.Magma.Types

  --other-modules:        Foreign.CUDA.Magma.Internal.C2HS
  other-modules:        Foreign.CUDA.Magma.TH

  extra-libraries:      magma


  build-depends:        base >= 4.4 && <4.8,
                        cuda >= 0.4.1,
                        filepath == 1.3.*,
                        parsec >= 3.1,
                        language-c >= 0.4.2,
                        template-haskell >= 2.7,
                        storable-complex >= 0.2.1

  other-extensions:     ForeignFunctionInterface, TemplateHaskell, CPP

  build-tools:          c2hs >= 0.16
  ghc-options:          -funbox-strict-fields -fwarn-tabs
